Fix the search filters on smaller screen widths

--- a/app/assets/stylesheets/views/sellers/search.scss
+++ b/app/assets/stylesheets/views/sellers/search.scss
@@ -62,6 +62,7 @@
           border: none;
           padding: 0.3rem 0.2rem 0.2rem 0.5rem;
           font-size: 1rem;
+          flex: 0;
 
           .icon {
             @extend .oi;
